[gd_scene load_steps=10 format=3 uid="uid://c7rdoqngphclf"]

[ext_resource type="Script" path="res://Scripts/Item/Weapon/magic_staff.gd" id="1_074ia"]
[ext_resource type="Script" path="res://Scripts/Components/spawner_component.gd" id="1_wkb78"]
[ext_resource type="Resource" uid="uid://bb6jua33dldua" path="res://Resources/Items/Weapons/staff.tres" id="2_hm4uo"]
[ext_resource type="PackedScene" uid="uid://bcx2dl1tf1hd7" path="res://Scenes/Items/Ammo/fireball.tscn" id="4_gxben"]
[ext_resource type="Script" path="res://Scripts/Components/firing_component.gd" id="4_mhwns"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1ov01"]
height = 1.25
radius = 0.025

[sub_resource type="SphereShape3D" id="SphereShape3D_83euf"]
radius = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_e082p"]
top_radius = 0.025
bottom_radius = 0.012
height = 1.25

[sub_resource type="SphereMesh" id="SphereMesh_5s52f"]
radius = 0.1
height = 0.2

[node name="MagicStaff" type="RigidBody3D"]
collision_layer = 8
freeze_mode = 1
script = ExtResource("1_074ia")
sheet = ExtResource("2_hm4uo")

[node name="Shaft" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.375, 0)
shape = SubResource("CylinderShape3D_1ov01")

[node name="Head" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.325, 0)
shape = SubResource("SphereShape3D_83euf")

[node name="SpawnerComponent" type="Node3D" parent="."]
script = ExtResource("1_wkb78")
scene = ExtResource("4_gxben")

[node name="GripPoint" type="Marker3D" parent="."]

[node name="Visuals" type="Node3D" parent="."]

[node name="Shaft" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.375, 0)
mesh = SubResource("CylinderMesh_e082p")
skeleton = NodePath("../..")

[node name="Head" type="MeshInstance3D" parent="Visuals/Shaft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.693844, 0)
mesh = SubResource("SphereMesh_5s52f")
skeleton = NodePath("../../..")

[node name="SpawnPoint" type="Marker3D" parent="Visuals/Shaft/Head"]

[node name="HolsterPoint" type="Marker3D" parent="."]

[node name="FiringComponent" type="Node" parent="."]
script = ExtResource("4_mhwns")
